--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="contact to find out more about croissants, new recepies and fillings"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Contact me-Croissant Fillings</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
