--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Croissant is a buttery, flaky, French viennoiserie pastry inspired by the
+      shape of the Austrian kipferl but using the French yeast-leavened
+      laminated dough"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Learn more about croissants-Croissant Fillings</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
